hard-gists/3778686/run.log
=== Docker Run Log for 3778686 ===
Started at: Mi 29. Okt 13:59:42 CET 2025

[2025-10-29 13:59:42] START: Running container for 3778686
[2025-10-29 13:59:43] SUCCESS: Container 4fa2ce908c89d8b50443bea51c30814360679c49be7c5ac19967c9d6ac4748ec started for 3778686
=== Container logs for 3778686 ===
  File "/snippet.py", line 9
    print "Usage: %s <source_user> <destination_user>" % (sys.argv[0],)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3778686 ===
[2025-10-29 13:59:45] INFO: Container 4fa2ce908c89d8b50443bea51c30814360679c49be7c5ac19967c9d6ac4748ec has stopped
